update layout bugs

--- a/style.css
+++ b/style.css
@@ -347,7 +347,10 @@ section{
   font-family: 'Roboto';
   scroll-behavior: smooth;
   overflow-x: hidden;
+  
 }
+
+
 
 header{
     width: 100%;
@@ -390,11 +393,8 @@ header{
     font-size: .6rem;
 }
 
-
-section{
-  min-height: 100vh;
   
-}
+
 .home{
     padding: 7rem 10% 0 10%;
 }
@@ -480,13 +480,15 @@ section{
 }
 
 .highlights-content{
-    display: flex;
+    display: block;
     justify-content: center;
+
 }
 .highlights-content ul{
     display: flex;
     justify-content: center;
-    
+    flex-wrap: wrap;
+    padding: 0;
     gap: 2rem;
    
 }
@@ -495,7 +497,6 @@ section{
     border: 3px solid rgb(138, 74, 10);
     width: 9rem;
     height: 13rem;
-    
     list-style-type: none;
     text-align: center;
     font-size: .7rem;
@@ -510,26 +511,20 @@ section{
   margin: 1rem;
 }
 
-.highlights h1{
-    
-    display: flex;
-    justify-content: center;
+.highlights-content h1{
     font-size: 4rem;
     margin-bottom:  3rem;
     font-weight: 700;
     text-align: center;
-    align-self: center;
-    justify-self: center;
-
+    width: 100%;
 }
 
 .projects{
-    padding: 5rem 10%;
+    padding: 0 10%;
 }
 
 .projects-content h1{
-    display: flex;
-    justify-content: center;
+    
     margin-bottom: 3rem;
     font-weight: 700;
     font-size: 4rem;
@@ -540,6 +535,7 @@ section{
     align-items: center;
     gap: 3rem;
     flex-wrap: wrap;
+    padding: 0;
     
 }
 
@@ -617,18 +613,29 @@ section{
     padding-top: 2rem;
 }
 
-
+.grad-info ul{
+    display: block;
+    justify-content: center;
+    padding: 0 1rem;
+    align-items: center;
+    
+}
 .grad-info li{
     
     display: flex;
     justify-content: left;
     margin-bottom: 0;
    align-content: center;
+   padding: 0;
+   
+   
 }
 
 .grad-info i{
+
     padding-right: 3rem;
     font-size: 2rem;
+    width: 3rem;
 }
 
 .grad-info p{
@@ -640,13 +647,13 @@ section{
 
 .achievements{
     
-    padding: 8rem 10%;
+    padding: 0;
 }
 
 .achievements h1{
     display: flex;
     justify-content: center;
-    font-size: 3.5rem;
+    font-size: 3.3rem;
     margin-bottom:  3rem;
     font-weight: 700;
 }
@@ -654,6 +661,11 @@ section{
 .achievements-content{
     display: flex;
     justify-content: center;
+
+}
+
+.achievements-content ul{
+    padding: 0;
 }
 .achievements-content li{
     border: 4px solid rgb(138, 74, 10);
